--- a/estilo.css
+++ b/estilo.css
@@ -66,7 +66,7 @@ section{
 }
 .imgcon{
     width: 90%;
-    height: 20%;
+    height: 30%;
 }
 .justificado{
     text-align: justify;
@@ -81,6 +81,12 @@ section{
 }
 .dois{
     width: 40%;
+    padding: 0 2%;
+}
+.dois1{
+    width: 40%;
+    padding: 0 2%;
+    margin-left: 60px;
 }
 .quatro{
     width: 15%;
