--- a/estilo.css
+++ b/estilo.css
@@ -29,7 +29,7 @@ li:hover{
     background-color: #01AAEA;
 }
 #imagem_fundo{
-    background: url("download.jpg");
+    background: url("aaa.jpg");
     height: 100%;
     text-align: center;
 }
@@ -52,10 +52,10 @@ li:hover{
     padding: 10px 10px 10px 10px;
 }
 .icone{
-    width: 20%;
+    width: 35%;
 }
 .icone1{
-    width: 26.5%;
+    width: 35%;
 }
 section{
     padding: 20px;
@@ -86,7 +86,7 @@ section{
 .dois1{
     width: 40%;
     padding: 0 2%;
-    margin-left: 60px;
+    margin-left: 55px;
 }
 .quatro{
     width: 15%;
